added pedals project

--- a/index.html
+++ b/index.html
@@ -81,6 +81,24 @@
         </section>
         <section class="blog-list px-3 py-5 p-md-5">
             <div class="container">
+                <div class=" ml-10">
+                     ----- 2024 -----
+                </div>
+                <div class="card mb-5 py-3 px-3 shadow">
+                    <div class="item">
+                        <div class="media">
+                            <div class="media-body">
+                                <h3 class="title mb-1 "><a style="color:#0078E8" href="https://github.com/SFU-Blueprint/Pedals">PEDALS Project</a> <!-- <span class="meta mb-1" style="color:#0BDA51">Ongoing*</span> --></h3> 
+                                <div class="meta mb-1"><span class="date">February 2024 - Present</span></div> 
+                                <div class="intro">A cross collaborative project involving a team of designers, product/project managers, and engineers in creating a volunteer management system for <a style="color:blue" href="https://ourcommunitybikes.org">Our Community Bikes </a>, a non profit organization (NPO) focused on repairing bikes for those who experience barriers to affordable transportation.
+                                This project is done through <a style="color:#0078E8" href="https://sfublueprint.org">Blueprint</a>, a team of students from SFU who share a common interest in using technology to help NPOs around the world.</div>
+                            </div>
+                            <a href="https://github.com/SFU-Blueprint/Pedals" class="btn btn-secondary" style="background-color:black">View</a>
+                            <!--//media-body-->
+                        </div>
+                        <!--//media-->
+                    </div>
+                </div>
                 <div class="card mb-5 py-3 px-3 shadow">
                     <div class="item">
                         <div class="media">
@@ -96,7 +114,7 @@
                         <!--//media-->
                     </div>
                 </div>
-
+                ----- 2023 -----
                 <div class="card mb-5 py-3 px-3 shadow">
                     <div class="item">
                         <div class="media">
@@ -161,7 +179,7 @@
                         <!--//media-->
                     </div>
                 </div>
-
+                ----- 2022 -----
                 <!--//item-->
                 <div class="card mb-5 py-3 px-3 shadow">
                     <div class="item">
