updated personal description

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <section class="cta-section theme-bg-light py-5">
             <div class="container text-center">
                 <h2 class="heading">Welcome to my profile</h2>
-                <div class="intro">3rd year CS student from Simon Fraser University who is passionate about using software for <a style="color:#1E90FF; text-decoration:underline;" href="https://blueprint-website.vercel.app">social good</a>. I have experience with Python, C/C++, ReactJS, ExpressJS and the Flutter SDK. Currently seeking software internship opportunities.</div>
+                <div class="intro">4th year CS student from Simon Fraser University who is passionate about using software for <a style="color:#1E90FF; text-decoration:underline;" href="https://blueprint-website.vercel.app">social good</a>. I have experience with Python, ReactJS, ExpressJS, C/C++, and the Flutter SDK. Currently seeking software internship opportunities for Summer 2025.</div>
             </div>
             <!--//container-->
         </section>
