--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="about.html"><i class="fas fa-user fa-fw mr-2"></i>About Me</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="assets/Ronney_Resume.pdf"><i class="fas fa-briefcase fa-fw mr-2"></i>Resume</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
             </div>
